--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pandas=1.3.0
-pickle=4.0
-asgiref=3.4.1
-Django=3.2.5
-django-crispy-forms=1.12.0
-django-model-utils=4.1.1
-joblib=1.0.1
-numpy=1.21.0
-pip=21.1.3
-python-dateutil=2.8.1
-pytz=2021.1
-scikit-learn=0.24.2
-scipy=1.7.0
-setuptools5=7.1.0
-six=1.16.0
-sklearn=0.0
-sqlparse=0.4.1
-threadpoolctl=2.2.0
+pandas==1.3.0
+pickle==4.0
+asgiref==3.4.1
+Django==3.2.5
+django-crispy-forms==1.12.0
+django-model-utils==4.1.1
+joblib==1.0.1
+numpy==1.21.0
+pip==21.1.3
+python-dateutil==2.8.1
+pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.7.0
+setuptools5==7.1.0
+six==1.16.0
+sklearn==0.0
+sqlparse==0.4.1
+threadpoolctl==2.2.0
